--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Versatile-ui</title>
+    <!-- CSS link added -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- Fav icon added -->
+     <link rel="shortcut icon" href="./images/yoga.png" type="image/x-icon">
+    <!-- Google font -->
 </head>
 <body>
     
