--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,30 @@
     <!-- CSS link added -->
     <link rel="stylesheet" href="styles.css">
     <!-- Fav icon added -->
-     <link rel="shortcut icon" href="./images/yoga.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/yoga.png" type="image/x-icon">
     <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Playwrite+CU:wght@100..400&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <!-- header section -->
+    <header>
+        <nav class="navbar">
+            <h3 class="fitness-logo">Fitness</h3>
+        </nav>
+    </header>
+    <!-- main section -->
+    <main>
+
+    </main>
+    <!-- footer section -->
+    <footer>
+
+    </footer>
 </body>
+
 </html>
