--- a/index.html
+++ b/index.html
@@ -20,17 +20,187 @@
 <body>
     <!-- header section -->
     <header>
-        <nav class="navbar">
+        <nav class="navbar display-flex">
             <h3 class="fitness-logo">Fitness</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Service</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+            </ul>
+            <img id="menu-img" src="./images/menu (1).png" alt="" width="20px">
         </nav>
+        <section class="get-body-section display-flex">
+            <div class="get-body-div">
+                <h1 class="text-gray">Get body in <span id="shape">shape</span> & stay healthy</h1>
+                <p class="text-color-p">A huge selection of health and fitness content, healthy recipes and
+                    transformation stories to help
+                    you get fit and stay fit!</p>
+                <a class="text-gray join-club text-decoration" class="text-gray" href="https://www.who.int/">Join Club
+                    Now!</a>
+                <a class="text-gray download-club text-decoration" class="text-gray"
+                    href="https://www.who.int/">Download App</a>
+            </div>
+            <img src="./images/Images 2.png" alt="">
+        </section>
     </header>
     <!-- main section -->
     <main>
+        <section class="display-flex change-habit">
+            <div class="text-center">
+                <h1 class="text-gray">Change Your Habits</h1>
+                <p class="text-color-p">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="display-flex" id="exercice-img">
+                <div class="text-center habit-div-width">
+                    <img class="exercise" src="./images/image 3.png" alt="">
+                    <h2 class="text-gray">Movement</h2>
+                    <p class="text-color-p">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="text-center habit-div-width">
+                    <img class="exercise" src="./images/image 2.png" alt="">
+                    <h2 class="text-gray">Time</h2>
+                    <p class="text-color-p">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="text-center habit-div-width">
+                    <img class="exercise" src="./images/image 4.png" alt="">
+                    <h2 class="text-gray">Practice</h2>
+                    <p class="text-color-p">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="text-center habit-div-width">
+                    <img class="exercise" src="./images/image 5.png" alt="">
+                    <h2 class="text-gray">Weight Loss</h2>
+                    <p class="text-color-p">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+        <section class="display-flex run-extra">
+            <div class="run-extra-text">
+                <h1 class="text-gray run-h1">Run an Extra <br>
+                    Mile Easily</h1>
+                <p class="text-color-p">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym. With hundreds of professional workouts.</p>
+                <button class="text-gray join-club text-decoration">Join Now</button>
+            </div>
+            <img class="run-img" src="./images/run.jpg" alt="">
+        </section>
+        <section>
+            <div>
+                <h1 class="text-gray text-center">Trainings and Exercises</h1>
+                <p class="text-color-p text-center">We believe fitness should be accessible to everyone, everywhere,
+                    regardless of income or access to a gym.</p>
+                <div class="exercise-img-div">
+                    <img src="./images/exercise1.jpg" alt="">
+                    <img class="image2" src="./images/exercise2.png" alt="">
+                    <img src="./images/exercise3.png" alt="">
+                    <img class="image4" src="./images/exercise4.png" alt="">
+                    <img src="./images/exercise5.jpg" alt="">
+                    <img src="./images/exercise6.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h1 class="text-center text-gray">BMI Calculator</h1>
+                <p class="text-center text-color-p">We believe fitness should be accessible to everyone, everywhere,
+                    regardless of income or access to a gym.</p>
+                <p></p>
+            </div>
+            <div class="bmi-extra-div">
+                <div class="bmi display-flex">
+                    <div>
+                        <h1 class="text-gray">BMI Calculator Chart</h1>
+                        <table class="text-gray" id="table">
+                            <tr>
+                                <th class="boder-color">BMI </th>
+                                <th class="boder-color">Weight Status</th>
+                            </tr>
+                            <tr>
+                                <td class="boder-color">Below 18.5</td>
+                                <td class="boder-color">Underweight</td>
+                            </tr>
+                            <tr>
+                                <td class="boder-color">18.5 - 24.9</td>
+                                <td class="boder-color">Healthy</td>
+                            </tr>
+                            <tr>
+                                <td class="boder-color">25.0 - 29.9</td>
+                                <td class="boder-color">Overweight</td>
+                            </tr>
+                            <tr>
+                                <td class="boder-color">30.0 - and Above</td>
+                                <td class="boder-color">Obese</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div>
+                        <h1 class="text-gray">Calculate your BMI</h1>
+                        <p class="text-color-p">We believe fitness should be accessible to everyone, <br> everywhere,
+                            regardless of income or access
+                            to a gym. </p>
+                        <div class="input-bmi">
+                            <input type="text" placeholder="Height/cm">
+                            <input type="text" placeholder="Weight/kg">
+                            <input type="text" placeholder="Age">
+                            <select id="gender" name="gender">
+                                <option value="" disabled selected hidden>Choose Gender</option>
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                            </select>
+                            <select id="activity" name="activity">
+                                <option value="" disabled selected hidden>Choose Yoyr activity</option>
+                                <option value="play">Play</option>
+                                <option value="walk">Walk</option>
+                            </select>
+                            <button class=" calculate-button text-gray">Calculate</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="text-center">
+                <h1 class="text-gray">Meet Our Team</h1>
+                <p class="text-color-p">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="tariner-image">
+                <img class="mobile-none" src="./images/trainer1.png" alt="">
+                <img src="./images/trainer2.png" alt="">
+                <img src="./images/trainer3.png" alt="">
+                <img class="mobile-none" src="./images/trainer4.png" alt="">
+                <img src="./images/trainer5.png" alt="">
+                <img src="./images/trainer6.png" alt="">
+            </div>
 
+        </section>
     </main>
     <!-- footer section -->
     <footer>
-
+        <div class="footer-div footer-section">
+            <div id="first-footer-part">
+                <h1 class="text-gray">Fitness</h1>
+                <p class="text-color-p">We believe fitness should be accessible <br> to everyone, everywhere, regardless
+                    of
+                    income <br> or access to a gym.
+                </p>
+            </div>
+            <div class="text-color-p">
+                <h2 class="text-gray">Get Started</h2>
+                <p>Service</p>
+                <p>Contact Us</p>
+                <p>Affiliate Program</p>
+                <p>About Us</p>
+            </div>
+            <div class="text-color-p">
+                <h2 class="text-gray">Get Started</h2>
+                <p>Fitness</p>
+                <p>Platform</p>
+                <p>Workout Libary</p>
+                <p>App Design</p>
+            </div>
+        </div>
     </footer>
 </body>
 
