--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                 <div class="exercise-img-div">
                     <img src="./images/exercise1.jpg" alt="">
                     <img class="image2" src="./images/exercise2.png" alt="">
-                    <img src="./images/exercise3.png" alt="">
+                    <img class="mobile-none" src="./images/exercise3.png" alt="">
                     <img class="image4" src="./images/exercise4.png" alt="">
                     <img src="./images/exercise5.jpg" alt="">
-                    <img src="./images/exercise6.jpg" alt="">
+                    <img class="mobile-none" src="./images/exercise6.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -135,7 +135,7 @@
                         </table>
                     </div>
                     <div>
-                        <h1 class="text-gray">Calculate your BMI</h1>
+                        <h1 class="text-gray cal-bmi">Calculate your BMI</h1>
                         <p class="text-color-p">We believe fitness should be accessible to everyone, <br> everywhere,
                             regardless of income or access
                             to a gym. </p>
@@ -173,7 +173,31 @@
                 <img src="./images/trainer5.png" alt="">
                 <img src="./images/trainer6.png" alt="">
             </div>
-
+        </section>
+        <section class="faq-section">
+            <div>
+                <h1 class="text-center text-gray">FAQ</h1>
+                <details>
+                    <summary class="text-color-p">How much would I have to pay upfront to join the gym?
+                    </summary>
+                    <p class="text-color-p">The upfront cost to join a gym can vary. Some gyms may require an initiation fee or enrollment fee when you sign up. This fee covers administrative costs and access to the gym.</p>
+                </details>
+                <details>
+                    <summary class="text-color-p">How much does a membership cost on a per-month or per-year basis, including taxes and fees?
+                    </summary>
+                    <p class="text-color-p">Gym membership costs depend on factors like location, amenities, and membership type. Some gyms offer month-to-month memberships, while others provide discounted rates for longer commitments (e.g., 6, 12, or 18 months.</p>
+                </details>
+                <details>
+                    <summary class="text-color-p">What services and amenities are included in the membership?
+                    </summary>
+                    <p class="text-color-p">TIt’s essential to know what you’re getting for your membership fee. Common amenities include access to fitness equipment, group classes, locker rooms, showers, and sometimes personal training sessions. Some gyms also offer extras like saunas, swimming pools, or childcare facilities.</p>
+                </details>
+                <details>
+                    <summary class="text-color-p">How can I cancel the membership?
+                    </summary>
+                    <p class="text-color-p">Life circumstances change, and you might need to cancel your membership. Find out the gym’s cancellation process. Some gyms allow you to cancel online, while others may require written notice.</p>
+                </details>
+            </div>
         </section>
     </main>
     <!-- footer section -->
