header small div done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,19 @@
                 <a class="text-gray download-club text-decoration" class="text-gray"
                     href="https://www.who.int/">Download App</a>
             </div>
-            <img src="./images/Images 2.png" alt="">
+           
+           <div>
+            <div class="header-image-small-div" id="five-hundread">
+                <p class="numbers-div">500+</p>
+                <p>Free Workout Videos</p>
+            </div>
+            <img id="header-exercise-img" src="./images/Images 2.png" alt="">
+           
+            <div  class="header-image-small-div" id="three-hundread">
+                <p class="numbers-div">350+</p>
+                <p>Video tutorial</p>
+            </div>
+           </div>
         </section>
     </header>
     <!-- main section -->
@@ -204,7 +216,7 @@
     <footer>
         <div class="footer-div footer-section">
             <div id="first-footer-part">
-                <h1 class="text-gray">Fitness</h1>
+                <h1 class="text-gray fitness-logo">Fitness</h1>
                 <p class="text-color-p">We believe fitness should be accessible <br> to everyone, everywhere, regardless
                     of
                     income <br> or access to a gym.
