border radius added

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                 <a class="text-gray download-club text-decoration" class="text-gray"
                     href="https://www.who.int/">Download App</a>
             </div>
-           
-           <div>
-            <div class="header-image-small-div" id="five-hundread">
-                <p class="numbers-div">500+</p>
-                <p>Free Workout Videos</p>
+
+            <div>
+                <div class="header-image-small-div" id="five-hundread">
+                    <p class="numbers-div">500+</p>
+                    <p>Free Workout Videos</p>
+                </div>
+                <img id="header-exercise-img" src="./images/Images 2.png" alt="">
+
+                <div class="header-image-small-div" id="three-hundread">
+                    <p class="numbers-div">350+</p>
+                    <p>Video tutorial</p>
+                </div>
             </div>
-            <img id="header-exercise-img" src="./images/Images 2.png" alt="">
-           
-            <div  class="header-image-small-div" id="three-hundread">
-                <p class="numbers-div">350+</p>
-                <p>Video tutorial</p>
-            </div>
-           </div>
         </section>
     </header>
     <!-- main section -->
@@ -129,20 +129,20 @@
                                 <th class="boder-color">Weight Status</th>
                             </tr>
                             <tr>
-                                <td class="boder-color">Below 18.5</td>
-                                <td class="boder-color">Underweight</td>
+                                <td class="boder-color text-color-p">Below 18.5</td>
+                                <td class="boder-color text-color-p">Underweight</td>
                             </tr>
                             <tr>
-                                <td class="boder-color">18.5 - 24.9</td>
-                                <td class="boder-color">Healthy</td>
+                                <td class="boder-color text-color-p">18.5 - 24.9</td>
+                                <td class="boder-color text-color-p">Healthy</td>
                             </tr>
                             <tr>
-                                <td class="boder-color">25.0 - 29.9</td>
-                                <td class="boder-color">Overweight</td>
+                                <td class="boder-color text-color-p">25.0 - 29.9</td>
+                                <td class="boder-color text-color-p">Overweight</td>
                             </tr>
                             <tr>
-                                <td class="boder-color">30.0 - and Above</td>
-                                <td class="boder-color">Obese</td>
+                                <td class="boder-color text-color-p">30.0 - and Above</td>
+                                <td class="boder-color text-color-p">Obese</td>
                             </tr>
                         </table>
                     </div>
@@ -178,12 +178,48 @@
                     income or access to a gym.</p>
             </div>
             <div class="tariner-image">
-                <img class="mobile-none" src="./images/trainer1.png" alt="">
-                <img src="./images/trainer2.png" alt="">
-                <img src="./images/trainer3.png" alt="">
-                <img class="mobile-none" src="./images/trainer4.png" alt="">
-                <img src="./images/trainer5.png" alt="">
-                <img src="./images/trainer6.png" alt="">
+                <div class="all-trainer">
+                    <img class="mobile-none " src="./images/trainer1.png" alt="">
+                    <div class="trainer-name mobile-none">
+                        <h5 class="text-gray">Jerome Bell</h5>
+                        <p class="text-color-p">Trainer</p>
+                    </div>
+                </div>
+                <div class="all-trainer">
+                    <img src="./images/trainer2.png" alt="">
+                    <div  class="trainer-name">
+                        <h5 class="text-gray">Cameron Williamson</h5>
+                        <p class="text-color-p">Trainer</p>
+                    </div>
+                </div>
+                <div class="all-trainer">
+                    <img src="./images/trainer3.png" alt="">
+                    <div  class="trainer-name">
+                        <h5 class="text-gray">Darrell Steward</h5>
+                        <p class="text-color-p">Trainer</p>
+                    </div>
+                </div>
+                <div class="all-trainer">
+                    <img class="mobile-none" src="./images/trainer4.png" alt="">
+                    <div class="trainer-name mobile-none">
+                        <h5 class="text-gray">Dianne Russell</h5>
+                        <p class="text-color-p">Trainer</p>
+                    </div>
+                </div>
+                <div class="all-trainer">
+                    <img src="./images/trainer5.png" alt="">
+                    <div class="trainer-name">
+                        <h5 class="text-gray">Cody Fisher</h5>
+                        <p class="text-color-p">Trainer</p>
+                    </div>
+                </div>
+                <div class="all-trainer">
+                    <img src="./images/trainer6.png" alt="">
+                    <div class="trainer-name">
+                        <h5 class="text-gray">Theresa Webb</h5>
+                        <p class="text-color-p">Trainer</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="faq-section">
@@ -192,22 +228,32 @@
                 <details>
                     <summary class="text-color-p">How much would I have to pay upfront to join the gym?
                     </summary>
-                    <p class="text-color-p">The upfront cost to join a gym can vary. Some gyms may require an initiation fee or enrollment fee when you sign up. This fee covers administrative costs and access to the gym.</p>
+                    <p class="text-color-p">The upfront cost to join a gym can vary. Some gyms may require an initiation
+                        fee or enrollment fee when you sign up. This fee covers administrative costs and access to the
+                        gym.</p>
                 </details>
                 <details>
-                    <summary class="text-color-p">How much does a membership cost on a per-month or per-year basis, including taxes and fees?
+                    <summary class="text-color-p">How much does a membership cost on a per-month or per-year basis,
+                        including taxes and fees?
                     </summary>
-                    <p class="text-color-p">Gym membership costs depend on factors like location, amenities, and membership type. Some gyms offer month-to-month memberships, while others provide discounted rates for longer commitments (e.g., 6, 12, or 18 months.</p>
+                    <p class="text-color-p">Gym membership costs depend on factors like location, amenities, and
+                        membership type. Some gyms offer month-to-month memberships, while others provide discounted
+                        rates for longer commitments (e.g., 6, 12, or 18 months.</p>
                 </details>
                 <details>
                     <summary class="text-color-p">What services and amenities are included in the membership?
                     </summary>
-                    <p class="text-color-p">TIt’s essential to know what you’re getting for your membership fee. Common amenities include access to fitness equipment, group classes, locker rooms, showers, and sometimes personal training sessions. Some gyms also offer extras like saunas, swimming pools, or childcare facilities.</p>
+                    <p class="text-color-p">TIt’s essential to know what you’re getting for your membership fee. Common
+                        amenities include access to fitness equipment, group classes, locker rooms, showers, and
+                        sometimes personal training sessions. Some gyms also offer extras like saunas, swimming pools,
+                        or childcare facilities.</p>
                 </details>
                 <details>
                     <summary class="text-color-p">How can I cancel the membership?
                     </summary>
-                    <p class="text-color-p">Life circumstances change, and you might need to cancel your membership. Find out the gym’s cancellation process. Some gyms allow you to cancel online, while others may require written notice.</p>
+                    <p class="text-color-p">Life circumstances change, and you might need to cancel your membership.
+                        Find out the gym’s cancellation process. Some gyms allow you to cancel online, while others may
+                        require written notice.</p>
                 </details>
             </div>
         </section>
