margin padding modified

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     Mile Easily</h1>
                 <p class="text-color-p">We believe fitness should be accessible to everyone, everywhere, regardless of
                     income or access to a gym. With hundreds of professional workouts.</p>
-                <button class="text-gray join-club text-decoration">Join Now</button>
+                <button class="text-gray join-now text-decoration">Join Now</button>
             </div>
             <img class="run-img" src="./images/run.jpg" alt="">
         </section>
