home button modify

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar display-flex">
             <h3 class="fitness-logo">Fitness</h3>
             <ul class="nav-links display-flex">
-                <li class="nav-item"><a href="https://www.who.int/" class="nav-link text-gray">Home</a></li>
+                <li id="home-button" class="nav-item"><a href="https://www.who.int/" class="nav-link text-gray">Home</a></li>
                 <li class="nav-item"><a href="https://www.who.int/" class="nav-link text-gray">Service</a></li>
                 <li class="nav-item"><a href="https://www.who.int/" class="nav-link text-gray">Contact</a></li>
                 <li class="nav-item"><a href="https://www.who.int/" class="nav-link text-gray">About</a></li>
