play button adeed

--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@
             <div>
                 <div class="header-image-small-div" id="five-hundread">
                     <p class="numbers-div text-gray">500+</p>
-                    <p class="text-color-p">Free Workout Videos</p>
+                    <p class="text-color-p margin-zero">Free Workout Videos</p>
                 </div>
                 <img id="header-exercise-img" src="./images/Images 2.png" alt="">
 
-                <div class="header-image-small-div" id="three-hundread">
-                    <div class="display-flex">
-                        <img src="./images/play-button.png" alt="" width="30px">
+                <div class="header-image-small-div display-flex" id="three-hundread">
+                    <img class="playbutton-image" src="./images/play-button.png" alt="" width="40px" height="40px">
+                    <h1 class="play-button-circle mobile-none"></h1>
+                    <div class="">
                         <p class="numbers-div text-gray">350+</p>
+                        <p class="text-color-p margin-zero" >Video tutorial</p>
                     </div>
-                    <p class="text-color-p">Video tutorial</p>
+                    
                 </div>
             </div>
         </section>
