margin and gray scale added

--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
                 <p>App Design</p>
             </div>
         </div>
+        <hr>
+        <p  class="text-color-p text-center">All right reserved @Fitness 2024</p>
     </footer>
 </body>
 
